Organização de pastas e padronização de header

--- a/Biblioteca/home.html
+++ b/Biblioteca/home.html
@@ -5,21 +5,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="IBOOKPagHome.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/home.css" />
+    <title>IBOOK BRASIL | Biblioteca</title>
 </head>
 
 <body>
     <header>
-        <h1 id="tituloprincipal">I-book</h1>
-        <div>
-            <a class="btn " href="">O QUE É I-book?</a>
-            &nbsp;&nbsp;
-            <a class="btn " href="">TODOS LIVROS</a>
-            &nbsp;&nbsp;
-            <a class="btn " href="">CATEGORIAS</a>
-            &nbsp;&nbsp;
-        </div>
+        <nav>
+            <img src="imgs/brasil.png"/>
+            <div class="menu">
+                <div class="links">
+                    <a href="home.html">Home</a>
+                    <a href="sobre.html">Sobre nós</a>
+                    <a href="categorias.html">Categorias</a>
+                </div>
+            </div>
+        </nav>
     </header>
     <section>
         <article>
@@ -27,6 +28,7 @@
             PROCURE ALGUM GENERO DE SUA OPÇÃO EM NOSSA CATEGORIA,OU ENTÃO VEJA TODOS AS NOSSAS OPÇÕES DISPONIVEIS ACIMA
         </article>
     </section>
+
 </body>
 
 </html>
