Atualizando com display grid na pag categorias

--- a/Biblioteca/categorias.html
+++ b/Biblioteca/categorias.html
@@ -21,7 +21,7 @@
             <img src="imgs/brasil.png" />
             <div class="menu">
                 <div class="links">
-                    <a href="index.html">Home</a>
+                    <a href="home.html">Home</a>
                     <a href="sobre.html">Sobre nós</a>
                     <a href="categorias.html">Categorias</a>
                 </div>
@@ -45,7 +45,7 @@
     <div>
         <section>
             <h2 class="tituloGeneros">Literatura Brasileira</h2>
-            <ul class="container">
+            <div class="container">
                 <div class="container-livros">
                     <div class="container-livrosImg"><img class="imagens" src="Capa-Brasileira/BrasCubas.jpg" alt="">
                     </div>
@@ -216,7 +216,7 @@
                         </button>
                     </div>
                 </div>
-            </ul>
+            </div>
         </section>
     </div>
 
@@ -225,7 +225,7 @@
     <div>
         <section>
             <h2 class="tituloGeneros">Literatura Estrangeira</h2>
-            <ul class="container">
+            <div class="container">
                 <div class="container-livros">
                     <div class="container-livrosImg"><img class="imagens" src="Capa-Estrangeira/Annefrank.jpg" alt="">
                     </div>
@@ -402,7 +402,7 @@
                         </button>
                     </div>
                 </div>
-            </ul>
+            </div>
         </section>
     </div>
 
@@ -410,7 +410,7 @@
     <div>
         <section>
             <h2 class="tituloGeneros">Literatura Infantil</h2>
-            <ul class="container">
+            <div class="container">
                 <div class="container-livros">
                     <div class="container-livrosImg"><img class="imagens" src="Capa-Liter-Infantil/alice.jpg" alt="">
                     </div>
@@ -605,7 +605,7 @@
                         </button>
                     </div>
                 </div>
-            </ul>
+            </div>
         </section>
     </div>
 
@@ -613,7 +613,7 @@
     <div>
         <section>
             <h2 class="tituloGeneros">Livros de História e Sociedade</h2>
-            <ul class="container">
+            <div class="container">
                 <div class="container-livros">
                     <div class="container-livrosImg"><img class="imagens" src="Capa-Historia/historia-do-br.jpg" alt="">
                     </div>
@@ -746,7 +746,7 @@
                         </button>
                     </div>
                 </div>
-            </ul>
+            </div>
         </section>
     </div>
 
