--- a/Biblioteca/home.html
+++ b/Biblioteca/home.html
@@ -1,35 +1,97 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/home.css" />
     <title>IBOOK BRASIL | Biblioteca</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <img src="imgs/brasil.png"/>
-            <div class="menu">
-                <div class="links">
-                    <a href="home.html">Home</a>
-                    <a href="sobre.html">Sobre nós</a>
-                    <a href="categorias.html">Categorias</a>
-                </div>
-            </div>
-        </nav>
+      <nav>
+        <img src="./imgs/brasil.png" />
+        <div class="menu">
+          <div class="links">
+            <a href="home.html">Home</a>
+            <a href="sobre.html">Sobre nós</a>
+            <a href="categorias.html">Categorias</a>
+          </div>
+        </div>
+      </nav>
     </header>
-    <section>
-        <article>
-            SOMOS UMA BIBLIOTECA TOTALMENTE ONLINE QUE DISTIBRUI LIVROS GRATUITOS PARA TODA POPULAÇÃO DE NOSSO PAIS,<BR>
-            PROCURE ALGUM GENERO DE SUA OPÇÃO EM NOSSA CATEGORIA,OU ENTÃO VEJA TODOS AS NOSSAS OPÇÕES DISPONIVEIS ACIMA
+    <div class="bemvindos">
+        <article id="artigo">
+            <p>Sejam bem-vindos a IBOOK BRASIL, onde vocês poderam desfrutar de uma ampla seleção de livros gratuitos de
+                literatura brasileira e estrangeira, livros infantis e de história. Nós acreditamos que a leitura é uma
+                das formas mais enriquecedoras de se entreter, aprender e se emocionar. Por isso, nossa equipe trabalha
+                incansavelmente para trazer o melhor da literatura para você, sem que precise gastar um centavo.
+                Esperamos que você desfrute de nossa coleção de livros gratuitos e se sinta inspirado a ler mais e mais.
+            </p>
         </article>
-        <p>é nois</p>
-    </section>
-
-</body>
-
+    </div>
+    <main class="container">
+      <section class="livros">
+        <div>
+          <figure>
+            <img class="imagens" src="./imgs/imagembranca.png" alt="img1" />
+            <div><h3>titulo</h3></div>
+            <figcaption>autor</figcaption>
+          </figure>
+        </div>
+        <div>
+          <button><a href="#">Donwload</a></button>
+        </div>
+      </section>
+      <section class="livros">
+        <div>
+          <figure>
+            <img class="imagens" src="./imgs/imagembranca.png" alt="img1" />
+            <div><h3>titulo</h3></div>
+            <figcaption>autor</figcaption>
+          </figure>
+        </div>
+        <div>
+          <button><a href="#">Donwload</a></button>
+        </div>
+      </section>
+      <section class="livros">
+        <div>
+          <figure>
+            <img class="imagens" src="./imgs/imagembranca.png" alt="img1" />
+            <div><h3>titulo</h3></div>
+            <figcaption>autor</figcaption>
+          </figure>
+        </div>
+        <div>
+          <button><a href="#">Donwload</a></button>
+        </div>
+      </section>
+      <section class="livros">
+        <div>
+          <figure>
+            <img class="imagens" src="./imgs/imagembranca.png" alt="img1" />
+            <div><h3>titulo</h3></div>
+            <figcaption>autor</figcaption>
+          </figure>
+        </div>
+        <div>
+          <button><a href="#">Donwload</a></button>
+        </div>
+      </section>
+      <section class="livros">
+        <div>
+          <figure>
+            <img class="imagens" src="./imgs/imagembranca.png" alt="img1" />
+            <div><h3>titulo</h3></div>
+            <figcaption>autor</figcaption>
+          </figure>
+        </div>
+        <div>
+          <button><a href="#">Donwload</a></button>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
