Término da pag home com responsividade

--- a/Biblioteca/home.html
+++ b/Biblioteca/home.html
@@ -1,97 +1,121 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/home.css" />
-    <title>IBOOK BRASIL | Biblioteca</title>
-  </head>
 
-  <body>
-    <header>
-      <nav>
-        <img src="./imgs/brasil.png" />
-        <div class="menu">
-          <div class="links">
-            <a href="home.html">Home</a>
-            <a href="sobre.html">Sobre nós</a>
-            <a href="categorias.html">Categorias</a>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/home.css" />
+  <title>IBOOK BRASIL | Biblioteca</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <img src="./imgs/brasil.png" />
+      <div class="menu">
+        <div class="links">
+          <a href="home.html">Home</a>
+          <a href="sobre.html">Sobre nós</a>
+          <a href="categorias.html">Categorias</a>
         </div>
-      </nav>
-    </header>
-    <div class="bemvindos">
-        <article id="artigo">
-            <p>Sejam bem-vindos a IBOOK BRASIL, onde vocês poderam desfrutar de uma ampla seleção de livros gratuitos de
-                literatura brasileira e estrangeira, livros infantis e de história. Nós acreditamos que a leitura é uma
-                das formas mais enriquecedoras de se entreter, aprender e se emocionar. Por isso, nossa equipe trabalha
-                incansavelmente para trazer o melhor da literatura para você, sem que precise gastar um centavo.
-                Esperamos que você desfrute de nossa coleção de livros gratuitos e se sinta inspirado a ler mais e mais.
-            </p>
-        </article>
+      </div>
+    </nav>
+  </header>
+  <div class="bemvindos">
+    <article id="artigo">
+      <p>Sejam bem-vindos a IBOOK BRASIL, onde vocês poderam desfrutar de uma ampla seleção de livros gratuitos de
+        literatura brasileira e estrangeira, livros infantis e de história. Nós acreditamos que a leitura é uma
+        das formas mais enriquecedoras de se entreter, aprender e se emocionar. Por isso, nossa equipe trabalha
+        incansavelmente para trazer o melhor da literatura para você, sem que precise gastar um centavo.
+        Esperamos que você desfrute de nossa coleção de livros gratuitos e se sinta inspirado a ler mais e mais.
+      </p>
+    </article>
+  </div>
+  <main class="container">
+    <h2>Mais lidos</h2>
+    <div class="container-livros">
+      <section class="livros">
+        <div>
+          <figure>
+            <img class="imagens" src="./Capa-Estrangeira/Annefrank.jpg" alt="img1" />
+            <div>
+              <h3>O diario de Anne Frank</h3>
+            </div>
+            <figcaption>Anne frank </figcaption>
+          </figure>
+        </div>
+        <div class="div-buttons">
+          <button><a href="#">Download</a></button>
+        </div>
+      </section>
+      <section class="livros">
+        <div>
+          <figure>
+            <img class="imagens" src="./Capa-Brasileira/BrasCubas.jpg" alt="img1" />
+            <div>
+              <h3>Memórias Póstumas de Brás Cubas</h3>
+            </div>
+            <figcaption>Machado de assis</figcaption>
+          </figure>
+        </div>
+        <div class="div-buttons">
+          <button><a href="#">Download</a></button>
+        </div>
+      </section>
+      <section class="livros">
+        <div>
+          <figure>
+            <img class="imagens" src="./Capa-Liter-Infantil/alice.jpg" alt="img1" />
+            <div>
+              <h3>Alice no país das maravilhas</h3>
+            </div>
+            <figcaption>Lewis Carroll</figcaption>
+          </figure>
+        </div>
+        <div class="div-buttons">
+          <button><a href="#">Download</a></button>
+        </div>
+      </section>
+      <section class="livros">
+        <div>
+          <figure>
+            <img class="imagens" src="./Capa-Estrangeira/domquixote.jpg" alt="img1" />
+            <div>
+              <h3>Dom Quixote</h3>
+            </div>
+            <figcaption>Miguel de Cervantes</figcaption>
+          </figure>
+        </div>
+        <div class="div-buttons">
+          <button><a href="#">Download</a></button>
+        </div>
+      </section>
+      <section class="livros">
+        <div>
+          <figure>
+            <img class="imagens" src="./Capa-Liter-Infantil/pequeno-principe.jpg" alt="img1" />
+            <div>
+              <h3>O pequeno príncipe</h3>
+            </div>
+            <figcaption>Antoine de Saint-Exupéry</figcaption>
+          </figure>
+        </div>
+        <div class="div-buttons">
+          <button><a href="#">Download</a></button>
+        </div>
+      </section>
     </div>
-    <main class="container">
-      <section class="livros">
-        <div>
-          <figure>
-            <img class="imagens" src="./imgs/imagembranca.png" alt="img1" />
-            <div><h3>titulo</h3></div>
-            <figcaption>autor</figcaption>
-          </figure>
-        </div>
-        <div>
-          <button><a href="#">Donwload</a></button>
-        </div>
-      </section>
-      <section class="livros">
-        <div>
-          <figure>
-            <img class="imagens" src="./imgs/imagembranca.png" alt="img1" />
-            <div><h3>titulo</h3></div>
-            <figcaption>autor</figcaption>
-          </figure>
-        </div>
-        <div>
-          <button><a href="#">Donwload</a></button>
-        </div>
-      </section>
-      <section class="livros">
-        <div>
-          <figure>
-            <img class="imagens" src="./imgs/imagembranca.png" alt="img1" />
-            <div><h3>titulo</h3></div>
-            <figcaption>autor</figcaption>
-          </figure>
-        </div>
-        <div>
-          <button><a href="#">Donwload</a></button>
-        </div>
-      </section>
-      <section class="livros">
-        <div>
-          <figure>
-            <img class="imagens" src="./imgs/imagembranca.png" alt="img1" />
-            <div><h3>titulo</h3></div>
-            <figcaption>autor</figcaption>
-          </figure>
-        </div>
-        <div>
-          <button><a href="#">Donwload</a></button>
-        </div>
-      </section>
-      <section class="livros">
-        <div>
-          <figure>
-            <img class="imagens" src="./imgs/imagembranca.png" alt="img1" />
-            <div><h3>titulo</h3></div>
-            <figcaption>autor</figcaption>
-          </figure>
-        </div>
-        <div>
-          <button><a href="#">Donwload</a></button>
-        </div>
-      </section>
-    </main>
-  </body>
+
+    <div class="vermais">
+      <button><a href="categorias.html">Ver Todos os livros</a></button>
+    </div>
+  </main>
+  <div>
+    <footer>
+      <p>© IBOOK BRASIL 2023 | Todos os direitos reservados.</p>
+    </footer>
+  </div>
+</body>
+
 </html>
