atualizacao pagina sobre

--- a/Biblioteca/sobre.html
+++ b/Biblioteca/sobre.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>IBOOK BRASIL | Biblioteca</title>
     <link rel="stylesheet" href="css/sobre.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -20,7 +22,50 @@
             </div>
         </nav>
     </header>
+    <section>
+        <h1>Integrantes do IBOOK Brasil</h1>
 
+        <li>Gabriel Henrique <a target="_blank"
+                href="https://github.com/gabshenridev">(https://github.com/gabshenridev)</a></li>
+        <li>Thainá Zerbinati <a target="_blank"
+                href="https://github.com/thaizerbinatti">(https://github.com/thaizerbinatti)</a></li>
+        <li>Luiz Felipe <a target="_blank"
+                href="https://github.com/felipeoliveir44">(https://github.com/felipeoliveir44)</a></li>
+        <li>Patrick Santos <a target="_blank" href="https://github.com/patricks10">(https://github.com/patricks10)</a>
+        </li>
+        <li>Abraão Pereira <a target="_blank"
+                href="https://github.com/abraaopereira">(https://github.com/abraaopereira)</a></li>
+    </section>
 
+    <article>
+        <h1>Nosso Projeto</h1>
+        <p>Este é um projeto de uma biblioteca online desenvolvido utilizando HTML e CSS, que disponibiliza livros de
+            domínio público para leitura online. Vem garantir acesso ao público em geral que admira uma boa leitura,
+            facilitando o acesso aos mais diversos gêneros literários, de forma gratuita, onde cada usuário pode fazer o
+            download do seu livro favorito para ler no seu smartphone, tablet ou computador. O projeto permite que o
+            usuário visualize a lista de livros disponíveis na biblioteca, bem como a sinopse e a capa de cada livro.
+            Além disso, é possível realizar buscas por título ou autor e adicionar livros à lista de favoritos. <li>
+                Tecnologias utilizadas: HTML/CSS.</li>
+            <li>Como executar o projeto: Clone o repositório para sua máquina local. Abra o arquivo index.html em seu
+                navegador de preferência</li>
+            <li>Contribuições: Este é um projeto de código aberto e as contribuições são bem-vindas! Se você deseja
+                contribuir, sinta-se à vontade para fazer um fork e enviar pull requests com melhorias, correções ou
+                novas funcionalidades.</li>
+        </p>
+
+        <h1>Objetivo da Biblioteca</h1>
+        <p>A Biblioteca Digital traz benefícios para todos, possibilitando o acesso à leitura aos usuários. Entre os
+            principais benefícios estão: prover o acesso às grandes literaturas brasileiras quanto extrangeira a
+            qualquer hora e em qualquer lugar, possibilitando, o uso simultâneo, por várias pessoas do mesmo objeto
+            digital; recuperação rápida e eficiente da informação; registro da memória da produção institucional;
+            preservação do material em formato digital e impresso, uma vez que o desgaste decorrente do manuseio e das
+            condições climáticas deixará de existir.</p>
+    </article>
+    <div>
+        <footer>
+            <p>© IBOOK BRASIL 2023 | Todos os direitos reservados.</p>
+        </footer>
+    </div>
 </body>
+
 </html>
