--- a/Biblioteca/sobre.html
+++ b/Biblioteca/sobre.html
@@ -39,27 +39,22 @@
 
     <article>
         <h1>Nosso Projeto</h1>
-        <p>Este é um projeto de uma biblioteca online desenvolvido utilizando HTML e CSS, que disponibiliza livros de
+        <ul>Este é um projeto realizado por alunos de Desenvolvimento Web do Instituto de Oportunidade Social. Foi desenvolvido uma biblioteca utilizando HTML e CSS, que disponibiliza livros de
             domínio público para leitura online. Vem garantir acesso ao público em geral que admira uma boa leitura,
-            facilitando o acesso aos mais diversos gêneros literários, de forma gratuita, onde cada usuário pode fazer o
-            download do seu livro favorito para ler no seu smartphone, tablet ou computador. O projeto permite que o
-            usuário visualize a lista de livros disponíveis na biblioteca, bem como a sinopse e a capa de cada livro.
-            Além disso, é possível realizar buscas por título ou autor e adicionar livros à lista de favoritos. <li>
+            facilitando o acesso a obras literárias mais famosas, de forma gratuita, onde cada usuário pode fazer o
+            download do seu livro em formato PDF, para ler no seu smartphone, tablet ou computador. O projeto permite que o
+            usuário visualize a lista de livros disponíveis na biblioteca, e a capa de cada livro.<li>
                 Tecnologias utilizadas: HTML/CSS.</li>
             <li>Como executar o projeto: Clone o repositório para sua máquina local. Abra o arquivo index.html em seu
                 navegador de preferência</li>
             <li>Contribuições: Este é um projeto de código aberto e as contribuições são bem-vindas! Se você deseja
                 contribuir, sinta-se à vontade para fazer um fork e enviar pull requests com melhorias, correções ou
                 novas funcionalidades.</li>
-        </p>
+        </ul>
 
         <h1>Objetivo da Biblioteca</h1>
         <p>A Biblioteca Digital traz benefícios para todos, possibilitando o acesso à leitura aos usuários. Entre os
-            principais benefícios estão: prover o acesso às grandes literaturas brasileiras quanto extrangeira a
-            qualquer hora e em qualquer lugar, possibilitando, o uso simultâneo, por várias pessoas do mesmo objeto
-            digital; recuperação rápida e eficiente da informação; registro da memória da produção institucional;
-            preservação do material em formato digital e impresso, uma vez que o desgaste decorrente do manuseio e das
-            condições climáticas deixará de existir.</p>
+            principais benefícios estão: acesso à cinquenta grandes literaturas brasileiras, estrangeiras, infantil e históricas; facilidade de fazer o download dos livros; com o formato em PDF possibilita a impressão do material; e grande variedade de títulos de livros para escolha.</p>
     </article>
     <div>
         <footer>
