--- a/Biblioteca/home.html
+++ b/Biblioteca/home.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/home.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <title>IBOOK BRASIL | Biblioteca</title>
+  <link rel="stylesheet" href="css/home.css" />
 </head>
 
 <body>
+
+  <!-- Cabeçalho -->
   <header>
     <nav>
       <img src="./imgs/brasil.png" />
@@ -22,6 +26,8 @@
       </div>
     </nav>
   </header>
+
+  <!-- Bem vindos -->
   <div class="bemvindos">
     <article id="artigo">
       <p>Sejam bem-vindos a IBOOK BRASIL, onde vocês poderam desfrutar de uma ampla seleção de livros gratuitos de
@@ -32,8 +38,12 @@
       </p>
     </article>
   </div>
+
+  <!-- Container -->
   <main class="container">
-    <h2>Mais lidos</h2>
+    <h2>Mais lidos:</h2>
+
+    <!-- Livros mais lidos -->
     <div class="container-livros">
       <section class="livros">
         <div>
@@ -49,6 +59,7 @@
           <button><a href="#">Download</a></button>
         </div>
       </section>
+
       <section class="livros">
         <div>
           <figure>
@@ -63,6 +74,7 @@
           <button><a href="#">Download</a></button>
         </div>
       </section>
+
       <section class="livros">
         <div>
           <figure>
@@ -77,6 +89,7 @@
           <button><a href="#">Download</a></button>
         </div>
       </section>
+
       <section class="livros">
         <div>
           <figure>
@@ -91,6 +104,7 @@
           <button><a href="#">Download</a></button>
         </div>
       </section>
+
       <section class="livros">
         <div>
           <figure>
@@ -107,12 +121,12 @@
       </section>
     </div>
 
-
-
     <div class="vermais">
       <button><a href="categorias.html">Ver Todos os livros</a></button>
     </div>
   </main>
+
+  <!-- Rodapé -->
   <div>
     <footer>
       <p>© IBOOK BRASIL 2023 | Todos os direitos reservados.</p>
