--- a/Biblioteca/sobre.html
+++ b/Biblioteca/sobre.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IBOOK BRASIL | Biblioteca</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <title>IBOOK BRASIL | Sobre nós </title>
     <link rel="stylesheet" href="css/sobre.css">
 </head>
 
 <body>
+    <!-- Cabeçalho/Categorias -->
     <header>
         <nav>
             <img src="imgs/brasil.png" />
@@ -22,45 +25,75 @@
             </div>
         </nav>
     </header>
-    <section>
-        <h1>Integrantes do IBOOK Brasil</h1>
 
-        <li>Gabriel Henrique <a target="_blank"
-                href="https://github.com/gabshenridev">(https://github.com/gabshenridev)</a></li>
-        <li>Thainá Zerbinati <a target="_blank"
-                href="https://github.com/thaizerbinatti">(https://github.com/thaizerbinatti)</a></li>
-        <li>Luiz Felipe <a target="_blank"
-                href="https://github.com/felipeoliveir44">(https://github.com/felipeoliveir44)</a></li>
-        <li>Patrick Santos <a target="_blank" href="https://github.com/patricks10">(https://github.com/patricks10)</a>
-        </li>
-        <li>Abraão Pereira <a target="_blank"
-                href="https://github.com/abraaopereira">(https://github.com/abraaopereira)</a></li>
-    </section>
-
-    <article>
-        <h1>Nosso Projeto</h1>
-        <ul>Este é um projeto realizado por alunos de Desenvolvimento Web do Instituto de Oportunidade Social. Foi desenvolvido uma biblioteca utilizando HTML e CSS, que disponibiliza livros de
-            domínio público para leitura online. Vem garantir acesso ao público em geral que admira uma boa leitura,
-            facilitando o acesso a obras literárias mais famosas, de forma gratuita, onde cada usuário pode fazer o
-            download do seu livro em formato PDF, para ler no seu smartphone, tablet ou computador. O projeto permite que o
-            usuário visualize a lista de livros disponíveis na biblioteca, e a capa de cada livro.<li>
-                Tecnologias utilizadas: HTML/CSS.</li>
-            <li>Como executar o projeto: Clone o repositório para sua máquina local. Abra o arquivo index.html em seu
-                navegador de preferência</li>
-            <li>Contribuições: Este é um projeto de código aberto e as contribuições são bem-vindas! Se você deseja
-                contribuir, sinta-se à vontade para fazer um fork e enviar pull requests com melhorias, correções ou
-                novas funcionalidades.</li>
-        </ul>
-
-        <h1>Objetivo da Biblioteca</h1>
-        <p>A Biblioteca Digital traz benefícios para todos, possibilitando o acesso à leitura aos usuários. Entre os
-            principais benefícios estão: acesso à cinquenta grandes literaturas brasileiras, estrangeiras, infantil e históricas; facilidade de fazer o download dos livros; com o formato em PDF possibilita a impressão do material; e grande variedade de títulos de livros para escolha.</p>
-    </article>
     <div>
-        <footer>
-            <p>© IBOOK BRASIL 2023 | Todos os direitos reservados.</p>
-        </footer>
-    </div>
+        <!-- Sobre nós e projeto -->
+        <section>
+            <h2 class="titulo">SOBRE NÓS</h3>
+            <p class="descricao">Alunos de Desenvolvimento Web do Instituto de
+                Oportunidade Social. Foi desenvolvido uma biblioteca utilizando HTML e CSS, que disponibiliza livros de
+                domínio público para leitura online. Vem garantir acesso ao público em geral que admira uma boa leitura,
+                facilitando o acesso a obras literárias mais famosas, de forma gratuita, onde cada usuário pode fazer o
+                download do seu livro em formato PDF, para ler no seu smartphone, tablet ou computador. O projeto
+                permite que o
+                usuário visualize a lista de livros disponíveis na biblioteca, e a capa de cada livro.
+            <ul class="descricao">
+                <li>Tecnologias utilizadas: HTML/CSS.</li>
+                <li>Como executar o projeto: Clone o repositório para sua máquina local. Abra o arquivo index.html em
+                    seu navegador de preferência</li>
+                <li>Contribuições: Este é um projeto de código aberto e as contribuições são bem-vindas! Se você deseja
+                    contribuir, sinta-se à vontade para fazer um fork e enviar pull requests com melhorias, correções ou
+                    novas funcionalidades.</li>
+            </ul>
+        </section>
+
+        <!-- Objetivo -->
+        <section>
+            <h2 class="titulo">OBJETIVOS</h2>
+            <p class="descricao">A Biblioteca Digital traz benefícios para todos, possibilitando o acesso à leitura aos
+                usuários. Entre os
+                principais benefícios estão: acesso à cinquenta grandes literaturas brasileiras, estrangeiras, infantil
+                e históricas; facilidade de fazer o download dos livros; com o formato em PDF possibilita a impressão do
+                material; e grande variedade de títulos de livros para escolha.</p>
+        </section>
+
+        <!-- Colaboradores e link GitHub -->
+        <section>
+            <h2 class="titulo">COLABORADORES</h2>
+            <div class=container>
+                <div class="containerColaboradores">
+                    <h3>Abraao Pereira</h3>
+                    <a href="https://github.com/abraaopereira" class="botao-github">GitHub</a>
+                </div>
+
+                <div class="containerColaboradores">
+                    <h3>Gabriel Henrique</h3>
+                    <a href="https://github.com/gabshenridev" class="botao-github">GitHub</a>
+                </div>
+
+                <div class="containerColaboradores">
+                    <h3>Luiz Felipe Oliveira</h3>
+                    <a href="https://github.com/felipeoliveir44" class="botao-github">GitHub</a>
+                </div>
+
+                <div class="containerColaboradores">
+                    <h3>Patrick Santos</h3>
+                    <a href="https://github.com/patricks10" class="botao-github">GitHub</a>
+                </div>
+
+                <div class="containerColaboradores">
+                    <h3>Thainá Zerbinatti</h3>
+                    <a href="https://github.com/thaizerbinatti" class="botao-github">GitHub</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Rodapé -->
+        <div>
+            <footer>
+                <p>© IBOOK BRASIL 2023 | Todos os direitos reservados.</p>
+            </footer>
+        </div>
 </body>
 
 </html>
