--- a/Biblioteca/index.html
+++ b/Biblioteca/index.html
@@ -19,7 +19,7 @@
       <img src="./imgs/brasil.png" />
       <div class="menu">
         <div class="links">
-          <a href="home.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="sobre.html">Sobre nós</a>
           <a href="categorias.html">Categorias</a>
         </div>
