--- a/Biblioteca/sobre.html
+++ b/Biblioteca/sobre.html
@@ -18,7 +18,7 @@
             <img src="imgs/brasil.png" />
             <div class="menu">
                 <div class="links">
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="sobre.html">Sobre nós</a>
                     <a href="categorias.html">Categorias</a>
                 </div>
@@ -63,27 +63,27 @@
             <div class=container>
                 <div class="containerColaboradores">
                     <h3>Abraao Pereira</h3>
-                    <a href="https://github.com/abraaopereira" class="botao-github">GitHub</a>
+                    <a href="https://github.com/abraaopereira" class="botao-github" target="_blank">GitHub</a>
                 </div>
 
                 <div class="containerColaboradores">
                     <h3>Gabriel Henrique</h3>
-                    <a href="https://github.com/gabshenridev" class="botao-github">GitHub</a>
+                    <a href="https://github.com/gabshenridev" class="botao-github" target="_blank">GitHub</a>
                 </div>
 
                 <div class="containerColaboradores">
                     <h3>Luiz Felipe Oliveira</h3>
-                    <a href="https://github.com/felipeoliveir44" class="botao-github">GitHub</a>
+                    <a href="https://github.com/felipeoliveir44" class="botao-github" target="_blank">GitHub</a>
                 </div>
 
                 <div class="containerColaboradores">
                     <h3>Patrick Santos</h3>
-                    <a href="https://github.com/patricks10" class="botao-github">GitHub</a>
+                    <a href="https://github.com/patricks10" class="botao-github" target="_blank">GitHub</a>
                 </div>
 
                 <div class="containerColaboradores">
                     <h3>Thainá Zerbinatti</h3>
-                    <a href="https://github.com/thaizerbinatti" class="botao-github">GitHub</a>
+                    <a href="https://github.com/thaizerbinatti" class="botao-github" target="_blank">GitHub</a>
                 </div>
             </div>
         </section>
